# toepol

./: .gitignore  .gitmodules  README.md  geo_grid.py  local_batch_job.py  marc_big_boi_brain.py  pyproject.toml  requirements.txt  setup_nle_sql.md  test_geo.py  test_pbi_geo.py
.github/workflows/: docker-publish-dev.yml  docker-publish.yml
agent/: Dockerfile  docker-compose.yml  template.env
dbschema/: README.md  datafundament-logical.dbs  ddl-datafundament-bigquery.sql
flows/: register_bag2gcs_with_dataproc.py  register_bag2gcs_with_dataproc_2.py  register_bag_gcs-to-bq.py
flows/bag-extract/: Dockerfile  docker-compose.yml  requirements.txt  setup.py  template.env
flows/bag-extract/src/bag-extract/: flow.py
flows/bag-extract/src/pyspark/: batch_job.py  batch_job_create_dim.py  batch_job_wkt_split.py
flows/bag-extract/src/util/: misc.py
flows/bag-extract/src/util/gcp/: dataproc.py  gcs.py
flows/enexis/: Dockerfile  docker-compose.yml  enexis.py  requirements.txt  setup.py
flows/enexis/src/enexis/: flow.py
flows/register/: register_bag2gcs.py  register_gcs2bq.py  register_zipped_csv2gcs.py
flows/run/: run_bag2gcs.py  run_gcs2bq.py
flows/spark_jobs/: test.py
flows/spark_jobs/bag/: batch_job.py  job.py
flows/util/: core.py
flows/util/gcp/: dataproc.py  storage.py
kadaster/: bag2gcs.py  bag_schemas.py  gcs2bq.py  test_dataproc.py  test_prefect_bag.py  test_prefect_bag_eddy.py  test_pyspark.py
kadaster/bag/: test.py
vis_test/: test.py
