[tool.poetry]
name = "toepol"
version = "0.1.0"
description = "Integrating Dutch open source data with cloud platforms"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7, <3.11"
alabaster = "0.7.12"
Babel = "2.9.1"
certifi = "2020.11.8"
chardet = "3.0.4"
Deprecated = "1.2.10"
docutils = "0.16"
idna = "2.10"
imagesize = "1.2.0"
Jinja2 = "2.11.3"
lxml = "^4.6.4"
MarkupSafe = "1.1.1"
packaging = "20.4"
Pygments = "2.7.4"
pyparsing = "2.4.7"
pytz = "2020.4"
requests = "2.25.0"
six = "1.15.0"
snowballstemmer = "2.0.0"
Sphinx = "3.3.1"
sphinxcontrib-applehelp = "1.0.2"
sphinxcontrib-devhelp = "1.0.2"
sphinxcontrib-htmlhelp = "1.0.3"
sphinxcontrib-jsmath = "1.0.1"
sphinxcontrib-qthelp = "1.0.3"
sphinxcontrib-serializinghtml = "1.1.4"
urllib3 = "1.26.5"
wrapt = "1.12.1"
# GDAL==2.3.1
# psycopg2==2.8.6


numpy = "^1.21.4"
GDAL = "3.3"
psycopg2 = "^2.9.2"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
